deploy/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zihao
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: zihao
  template:
    metadata:
      labels:
        app: zihao
    spec:
      containers:
      - name: zihao
        image: nginx:alpine
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - "wget https://raw.githubusercontent.com/zzh8829/zihao/master/deploy/nginx_gcs_proxy.conf -O /etc/nginx/nginx_gcs_proxy.conf && \
            wget https://raw.githubusercontent.com/zzh8829/zihao/master/deploy/nginx_zihao.conf -O /etc/nginx/conf.d/default.conf && \
            nginx -g 'daemon off;'"
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "20Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: zihao
  labels:
    app: zihao
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: zihao
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zihao
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - zihao.me
    - www.zihao.me
    secretName: zihao-tls
  rules:
  - host: zihao.me
    http:
      paths:
      - backend:
          serviceName: zihao
          servicePort: 80
        path: /
  - host: www.zihao.me
    http:
      paths:
      - backend:
          serviceName: zihao
          servicePort: 80
        path: /
